# Paper-Scraper

./: .coverage  README.md  pyproject.toml  requirements.txt
.cursor/rules/: cursorrules.mdc  git.mdc
docs/: architecture.mermaid  status.md  tasks.md  technical.md
src/frontend/: app.py
src/scraper/: arxiv_scraper.py  paper_scraper.py
tests/: __init__.py  conftest.py
tests/scraper/: test_arxiv_scraper.py  test_arxiv_scraper_advanced.py
